add new text, remove warning icon :)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<body>
 		<div class="mainc">
 			<h1>Welcome to <span class="mono">ts-typer.</span></h1>
-			⚠ it's still indev
+			It's still <b><span class="sylw">indev</span></b>!<br>
+			You can close this page.
 		</div>
 	</body>
 </html>
